<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/container_padding"
    tools:context=".ActivityMain">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_name"/>

    <EditText
        android:id="@+id/activity_main_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_main_name_hint"
        android:inputType="textPersonName"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_phone"/>

    <EditText
        android:id="@+id/activity_main_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_main_phone_hint"
        android:inputType="phone"/>

    <Button
        android:id="@+id/activity_main_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="guardar"
        android:text="@string/activity_main_save"/>

</LinearLayout>